# OpenCCU-Base

./: README.md
addons/asksinanalyzer/: README.md  build-addon.sh
addons/asksinanalyzer/pkg/: update_script
addons/asksinanalyzer/www/: api.cgi  index.html
addons/rftrafficlogger/: .gitignore  README.md  build-addon.sh
addons/rftrafficlogger/pkg/: update_script
firmware/access-controller/: fwmap
opt/HmIP/: legacy-parameter-definition.config
src/SetInterfaceClock/: SetInterfaceClock.cpp
src/crypttool/: Makefile  crypttool.cpp  crypttoolconfig.cpp  crypttoolconfig.h
src/devicetypes/: Makefile  device.xsd  list_values.tcl  stripdocu.tcl
src/devicetypes/rftypes/: Makefile  (+128 more)
src/eq3configcmd/: .cproject  .project  Makefile  eq3configcmd.cpp
src/eq3configd/: main.cpp
src/hs485d/: HMWLGWCommand.cpp  HMWLGWCommand.h  HMWLGWTransportFrame.cpp  HMWLGWTransportFrame.h  HMWLGWUtils.h  HS485Central.cpp  HS485Central.h  HS485Channel.cpp  HS485Channel.h  HS485ChannelDescription.cpp  HS485ChannelDescription.h  HS485CommMessage.cpp  HS485CommMessage.h  HS485CommMessageCCU1.cpp  HS485CommMessageCCU1.h  HS485CommMessageDecoder.cpp  HS485CommMessageDecoder.h  HS485CommMessageLGW.cpp  HS485CommMessageLGW.h  HS485Controller.cpp  HS485Controller.h  HS485ControllerCCU1.cpp  HS485ControllerCCU1.h  HS485ControllerLGW.cpp  HS485ControllerLGW.h  HS485Device.cpp  HS485Device.h  HS485DeviceDescription.cpp  HS485DeviceDescription.h  HS485EEpromCache.cpp  HS485EEpromCache.h  HS485FirmwareManager.cpp  HS485FirmwareManager.h  HS485Frame.cpp  HS485Frame.h  HS485LogicalInstance.cpp  HS485LogicalInstance.h  HS485LogicalTypeAddress.cpp  HS485LogicalTypeAddress.h  HS485MaintenanceChannel.cpp  (+27 more)
src/hs485dLoader/: Makefile  hs485dLoader.cpp
src/hss_led/: AlarmMessage.cpp  AlarmMessage.h  Info.cpp  Info.h  InfoLed.cpp  InfoLed.h  InternetLed.cpp  InternetLed.h  Makefile  MessageParser.cpp  MessageParser.h  Network.cpp  Network.h  RFLGWInfoLED.cpp  RFLGWInfoLED.h  ServiceMessage.cpp  ServiceMessage.h  UdpCannel.cpp  UdpCannel.h  UpdateAvailable.cpp  UpdateAvailable.h  defines.h  hss_led.cpp  led.cpp  led.h
src/libUnifiedLanComm/: Makefile
src/multimacd/: BidcosAesChallengeInfo.cpp  BidcosAesChallengeInfo.h  BidcosAesKey.cpp  BidcosAesKey.h  BidcosContext.cpp  BidcosContext.h  BidcosMacController.cpp  BidcosMacController.h  BidcosPeerContext.cpp  BidcosPeerContext.h  BidcosTelegram.cpp  BidcosTelegram.h  BinaryData.cpp  BinaryData.h  Crc16.cpp  Crc16.h  Dynamic.cpp  Dynamic.h  Enums.h  FastMacResponder.cpp  FastMacResponder.h  IDownstreamSerialFrameSink.h  IUpstreamSerialFrameSink.h  MacController.cpp  MacController.h  MacControllerQueueItem.cpp  MacControllerQueueItem.h  Makefile  MultimacManager.cpp  MultimacManager.h  MultithreadTest.cpp  MultithreadTest.h  Subsystem.cpp  Subsystem.h  SubsystemBidcos.cpp  SubsystemBidcos.h  SubsystemHmIp.cpp  SubsystemHmIp.h  SubsystemManager.cpp  SubsystemManager.h  (+13 more)
src/rfd/: BidcosInterface.cpp  BidcosInterface.h  BidcosInterfaceConcentrator.cpp  CMakeLists.txt  RFChannel.cpp  TrafficLogger.cpp  TrafficLogger.h  rfd.cpp
src/ssdpd/: Makefile  ssdpd.cpp
src/tclrega/: Makefile  tclrega.cpp
src/tclrpc/: tclrpc.cpp
src/tclticks/: Makefile
www/config/: cp_maintenance.cgi
www/rega/: licenseinfo.htm
www/tools/: rftrafficlogger.html
www/webui/: webui.js
(+289 files in other folders)
